# face-guard-repo

./: .env  .env.example  .gitignore  Dockerfile  README.md  SYSTEM.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.txt
app/: db.py  detect_faces.py  email_feedback.py  encrypt.py  eyeglasses.py  image_processing.py  liveness.py  main.py  mask.py  model.py  recognize.py  register.py  render.py  server.py  user_guide.py
app/api/: deps.py  middleware.py
app/api/routes/: auth.py  health.py  recognize.py  register.py
app/core/: config.py  exceptions.py  logging_setup.py  security.py
app/db/: pool.py  vector.py
app/services/: face_service.py
test/: test_eyeglass_video.py  test_glass.py  test_image_processing.py  test_liveness.py  test_mask.py  test_render.py  test_user_guide.py
