[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-guard"
version = "0.1.0"
description = "Local face guidance, liveness and recognition system"
readme = "README.md"
requires-python = "=3.10"

dependencies = [
  "numpy==2.1.3",
  "opencv-python==4.12.0.88",
  "Pillow==11.3.0",
  "scipy==1.15.3",
  "scikit-image==0.25.2",
  "mediapipe==0.10.21",
  "insightface==0.7.3",
  "deepface==0.0.94",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "onnx==1.18.0",
  "onnxruntime==1.22.1",
  "dlib==20.0.0",
  "pymilvus==2.5.14",
  "mysql-connector-python==9.4.0",
  "python-dotenv==1.1.1",
  "requests==2.32.4"
]

[project.scripts]
face-guard= "app.main:main"
